// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders default variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
  >
    Default
  </div>
</DocumentFragment>
`;

exports[`Badge > renders destructive variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
  >
    Destructive
  </div>
</DocumentFragment>
`;

exports[`Badge > renders outline variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    Outline
  </div>
</DocumentFragment>
`;

exports[`Badge > renders secondary variant 1`] = `
<DocumentFragment>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  >
    Secondary
  </div>
</DocumentFragment>
`;
